--- a/0x02-CSS_advanced/styles/4-style.css
+++ b/0x02-CSS_advanced/styles/4-style.css
@@ -11,8 +11,8 @@
 */
 
 :root {
-    font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
