--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -11,8 +11,8 @@
 */
 
 :root {
-    font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
     --color-primary: #d73953;
     --color-black: #090909;
     --color-white: #ffffff;
@@ -63,10 +63,7 @@ a {
    display: none;
 }
 
-.card-category {
-    color: var(--color-primary);
-}
-
+.card-category,
 .section-tagline {
-    color: var(--color-primary)cd;
+    color: var(--color-primary);
 }
