--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -140,7 +140,7 @@
   list-style: none;
   text-align: center;
 }
-.nav-item {
+.nav .nav-item {
   font-family: var(--nav-item-font-family);
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
@@ -148,11 +148,11 @@
   display: var(--nav-item-display);
   margin: var(--nav-item-margin);
 }
-.nav-link {
+.nav .nav-link {
   display: block;
   padding: 0.5rem 1rem;
 }
-.nav-link:hover {
+.nav .nav-link:hover {
   color: var(--nav-item-link-hover);
 }
 .footer {
