--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -1,9 +1,12 @@
 /*Write a Sass file that assigns: Margin left and right at 10px to body tags, Margin left and right at 15px to div tags, You must use a mixin*/
+
+@mixin margin-mixin($value) {
+    margin-left: $value;
+    margin-right: $value;
+}
 body {
-    margin-left: 10px;
-    margin-right: 10px;
+    @include margin-mixin(10px);
 }
 div {
-    margin-left: 15px;
-    margin-right: 15px;
+    @include margin-mixin(15px);
 }
