--- a/0x04-flexbox/5-styles.css
+++ b/0x04-flexbox/5-styles.css
@@ -338,29 +338,25 @@ a:active {
   display: flex;
 }
 ul.row {
-  margin: 0;
+  margin: -1rem;
   padding: 0;
   list-style: none;
 }
 
 [class*="col-"] {
-  padding: 0.5rem;
+  margin: 1rem;
 }
 
 .col-1-3 {
-  width: 33.33%;
+  width: calc((100% / 3) - 2rem);
 }
 
 .col-1-2 {
-  width: 50%;
+  width: calc((100% / 2) - 2rem);
 }
 
 /* Navbar
         ============================= */
-
-.navbar-menu {
-  float: right;
-}
 
 .nav {
   margin: 0;
@@ -408,22 +404,15 @@ ul.row {
 /* Header
         ============================= */
 
+.header-container {
+  display: flex;
+  justify-content: space-between;
+}
 .header {
   padding: var(--header-padding);
   position: relative;
   z-index: 3;
   background: transparent;
-}
-
-.header-logo {
-  position: var(--header-logo-position);
-}
-
-.header-logo a {
-  display: var(--header-logo-link-display);
-  position: var(--header-logo-link-position);
-  top: var(--header-logo-link-top);
-  left: var(--header-logo-link-left);
 }
 
 /* Footer
