--- a/0x04-flexbox/11-styles.css
+++ b/0x04-flexbox/11-styles.css
@@ -699,7 +699,7 @@ align-self: center;
       min-height: 40hv;
     }
 
-    .section-body .hero-article {
+    .hero-article .section-body {
       position: relative;
       padding: 7rem 0 0;
       z-index: 2;
