--- a/0x04-flexbox/11-styles.css
+++ b/0x04-flexbox/11-styles.css
@@ -10,7 +10,7 @@
 /* Reset / Normalize
    ============================= */
 
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -159,7 +159,7 @@ template {
 }
 
 /* Variables
-     ============================= */
+   ============================= */
 
 :root {
   --color-primary: #d73953;
@@ -237,8 +237,7 @@ template {
   --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
-/* Base
-        ============================= */
+/* Base ============================= */
 
 *,
 *:before,
@@ -303,8 +302,7 @@ a:active {
   transition-property: color, background-color;
 }
 
-/* Helpers
-        ============================= */
+/* Helpers ============================= */
 
 .visually-hidden:not(:focus):not(:active) {
   position: absolute !important;
@@ -317,8 +315,7 @@ a:active {
 
 /*** 2. LAYOUT ***/
 
-/* Layout
-        ============================= */
+/* Layout ============================= */
 
 .container {
   width: 960px;
@@ -326,16 +323,16 @@ a:active {
   margin-right: auto;
 }
 
-/* Grid
-        ============================= */
+/* Grid ============================= */
 
-.row {
-  display: flex;
-}
 ul.row {
   margin: -1rem;
   padding: 0;
   list-style: none;
+}
+
+.row {
+  display: flex;
 }
 
 [class*="col-"] {
@@ -347,11 +344,14 @@ ul.row {
 }
 
 .col-1-2 {
-  width: calc((100% / 2) - 2rem);
+  width: calc((100% 2) - 2rem);
 }
 
-/* Navbar
-        ============================= */
+/* Navbar ============================= */
+
+.navbar-menu {
+  float: right;
+}
 
 .nav {
   display: flex;
@@ -366,7 +366,10 @@ ul.row {
   font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
   letter-spacing: var(--nav-item-letter-spacing);
-  
+}
+
+nav .nav-item + .nav-item {
+  margin: var(--nav-item-margin);
 }
 
 .nav .nav-link {
@@ -395,18 +398,9 @@ ul.row {
   background-color: var(--color-primary);
   width: 100%;
 }
-.nav .nav-item + .nav-item {
-  margin: var(--nav-item-margin);
-}
 
-/* Header
-        ============================= */
+/* Header ============================= */
 
-.header-container {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
 .header {
   padding: var(--header-padding);
   position: relative;
@@ -414,8 +408,13 @@ ul.row {
   background: transparent;
 }
 
-/* Footer
-        ============================= */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Footer ============================= */
 
 .footer {
   --nav-item-font-weight: normal;
@@ -447,8 +446,7 @@ ul.row {
 
 /*** 3. SECTION ***/
 
-/* Section (all styles)
-        ============================= */
+/* Section (all styles) ============================= */
 
 .section {
   padding: var(--section-padding);
@@ -484,8 +482,7 @@ ul.row {
   text-align: var(--section-footer-align);
 }
 
-/* Section theming
-        ============================= */
+/* Section theming ============================= */
 
 [data-section-theme="dark"] {
   --button-color: var(--color-white);
@@ -494,8 +491,7 @@ ul.row {
   background-color: #010101;
 }
 
-/* Section HERO
-        ============================= */
+/* Section HERO ============================= */
 
 .hero-homepage {
   background-position: 75% 0;
@@ -531,31 +527,31 @@ ul.row {
 }
 
 /* Section Latest news ============================= */
-.section-latest-news .row {
+
+.row {
   flex-direction: row-reverse;
 }
 
 /* Section SERVICES ============================= */
+
 .section-services .row {
   flex-wrap: wrap;
 }
 
-/* Section ABOUT US ============================= */
+/* Section ABOUT US */
 
-.section-about-us [class*='col-']{
-align-self: center;
+.section-about-us [class^="col-"] {
+  align-self: center;
 }
 /*** 4. CARD ***/
 
-/* Card (all styles)
-        ============================= */
+/* Card (all styles) ============================= */
 
 .card-category {
   color: var(--color-primary);
 }
 
-/* Card WORK
-        ============================= */
+/* Card WORK ============================= */
 
 .card-work .card-outer {
   position: relative;
@@ -619,8 +615,7 @@ align-self: center;
   opacity: 1;
 }
 
-/* Card SERVICES
-        ============================= */
+/* Card SERVICES ============================= */
 
 .card-services .card-title {
   margin: 0;
@@ -640,8 +635,7 @@ align-self: center;
   transition-property: color, background-color;
 }
 
-/* Card TESTIMONIAL
-        ============================= */
+/* Card TESTIMONIAL ============================= */
 
 .card-testimonial {
   text-align: center;
@@ -674,33 +668,32 @@ align-self: center;
 }
 
 /*** ARTICLE PAGE ***/
-/* Section HERO (article)
-    ============================= */
+/* Section HERO (article)============================= */
 
-    .hero-article {
-      background-size: 150rem 100rem;
-      background-position: 50% 0;
-    }
+.hero-article {
+  background-size: 150rem 100rem;
+  background-position: 50% 0;
+}
 
-    .hero-article::before {
-      content: "";
-      background: rgba(0, 0, 0, 0.8);
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0;
-      bottom: 0;
-      z-index: 0;
-    }
+.hero-article::before {
+  content: "";
+  background: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 0;
+}
 
-    .hero-article .section-inner {
-      text-align: center;
-      align-items: center;
-      min-height: 40hv;
-    }
+.hero-article .section-inner {
+  text-align: center;
+  align-items: center;
+  min-height: 40vh;
+}
 
-    .hero-article .section-body {
-      position: relative;
-      padding: 7rem 0 0;
-      z-index: 2;
-    }
+.hero-article .section-body {
+  position: relative;
+  padding: 7rem 0 0;
+  z-index: 2;
+}
