--- a/0x05-form/05-styles.css
+++ b/0x05-form/05-styles.css
@@ -747,7 +747,7 @@
     overflow: hidden;
 }
 
-.form-group .form-help:focus-within {
+.form-group:focus-within .form-help {
     max-height: 20rem;
     margin: .4rem 0 0;
 }
